Fix ng-model names in aluno-dialog.html, tried fix 'aparelhos_eletronicos' without success

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -353,7 +353,7 @@
                               <div layout="column" layout-gt-xs="row">
                                 <div flex="100" flex-gt-sm="50">
                                     Problemas de saúde na família?
-                                    <md-checkbox ng-model="vm.saude.problemas_de_saude_na_familia" aria-label="Problemas de saúde na família?">
+                                    <md-checkbox ng-model="vm.saude.problemas_saude_familia" aria-label="Problemas de saúde na família?">
                                     </md-checkbox>
                                   </div>
                               </div>
@@ -705,19 +705,19 @@
                             <div layout="column" layout-gt-xs="row">
                               <div flex="100" flex-gt-sm="50">
                                 Televisão
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.televisao" aria-label="Televisão">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.televisao" aria-label="Televisão">
                                 </md-checkbox>
                               </div>
 
                               <div flex="100" flex-gt-sm="50">
                                 TV por assinatura
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.tv_assinatura" aria-label="TV por assinatura">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.tv_assinatura" aria-label="TV por assinatura">
                                 </md-checkbox>
                               </div>
 
                               <div flex="100" flex-gt-sm="50">
                                 Computador
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.computador" aria-label="Computador">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.computador" aria-label="Computador">
                                 </md-checkbox>
                               </div>
                               </div>
@@ -725,19 +725,19 @@
                               <div layout="column" layout-gt-xs="row">
                               <div flex="100" flex-gt-sm="50">
                                 Notebook
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.notebook" aria-label="Notebook">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.notebook" aria-label="Notebook">
                                 </md-checkbox>
                               </div>
 
                               <div flex="100" flex-gt-sm="50">
                                 Fogão
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.fogao" aria-label="Fogão">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.fogao" aria-label="Fogão">
                                 </md-checkbox>
                               </div>
 
                               <div flex="100" flex-gt-sm="50">
                                 Geladeira
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.geladeira" aria-label="Geladeira">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.geladeira" aria-label="Geladeira">
                                 </md-checkbox>
                               </div>
                               </div>
@@ -745,19 +745,19 @@
                               <div layout="column" layout-gt-xs="row">
                                 <div flex="100" flex-gt-sm="50">
                                   Microondas
-                                  <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.microondas" aria-label="Microondas">
+                                  <md-checkbox ng-model="vm.aparelhos_eletronicos.microondas" aria-label="Microondas">
                                   </md-checkbox>
                                 </div>
 
                                 <div flex="100" flex-gt-sm="50">
                                   Tablets
-                                  <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.tablets" aria-label="Tablets">
+                                  <md-checkbox ng-model="vm.aparelhos_eletronicos.tablet" aria-label="Tablets">
                                   </md-checkbox>
                                 </div>
 
                                 <div flex="100" flex-gt-sm="50">
                                   Máquina de lavar
-                                  <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.maquina_de_lavar" aria-label="Máquina de lavar">
+                                  <md-checkbox ng-model="vm.aparelhos_eletronicos.maquina_de_lavar" aria-label="Máquina de lavar">
                                   </md-checkbox>
                                 </div>
                               </div>
@@ -765,19 +765,19 @@
                             <div layout="column" layout-gt-xs="row">
                               <div flex="100" flex-gt-sm="50">
                                 Máquina de secar
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.maquina_de_secar" aria-label="Máquina de secar">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.maquina_de_secar" aria-label="Máquina de secar">
                                 </md-checkbox>
                               </div>
 
                               <div flex="100" flex-gt-sm="50">
                                 Telefone fixo
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.telefone_fixo" aria-label="Telefone fixo">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.telefone_fixo" aria-label="Telefone fixo">
                                 </md-checkbox>
                               </div>
 
                               <div flex="100" flex-gt-sm="50">
                                 Celular
-                                <md-checkbox ng-model="vm.situacao_habitacional.aparelhos_eletronicos.celular" aria-label="Celular">
+                                <md-checkbox ng-model="vm.aparelhos_eletronicos.celular" aria-label="Celular">
                                 </md-checkbox>
                               </div>
                             </div>
@@ -808,7 +808,7 @@
                           </md-input-container>
 
                    <md-input-container flex="100" flex-gt-xs="20">
-                  <input type="text" name="energia_eletrica"ng-model="vm.energia_eletrica" ui-money-mask placeholder="Energia elétrica"
+                  <input type="text" name="energia_eletrica"ng-model="vm.despesa.energia_eletrica" ui-money-mask placeholder="Energia elétrica"
                     >
                  </md-input-container>
 
