Fix saude ng-model name 'plano_saude' on aluno-dialog.html

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -361,7 +361,7 @@
                                 <div layout="column" layout-gt-xs="row">
                                   <div flex="100" flex-gt-sm="50">
                                       Possui plano de saúde?
-                                      <md-checkbox ng-model="vm.saude.plano_de_saude" aria-label="Possui plano de saúde">
+                                      <md-checkbox ng-model="vm.saude.plano_saude" aria-label="Possui plano de saúde">
                                       </md-checkbox>
                                   </div>
                                 </div>
