Fix estrutura_familiar ng-model name 'uso_alcool_drogas' on aluno-dialog.html

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -431,7 +431,7 @@
                               <div layout="column" layout-gt-xs="row">
                                 <div flex="100" flex-gt-sm="50">
                                   Familiares com problemas com uso de alcool/drogas?
-                                  <md-checkbox ng-model="vm.estrutura_familiar.uso_de_alcool_drogas" aria-label="Familiares com problemas com uso de alcool/drogas">
+                                  <md-checkbox ng-model="vm.estrutura_familiar.uso_alcool_drogas" aria-label="Familiares com problemas com uso de alcool/drogas">
                                   </md-checkbox>
                                 </div>
                               </div>
