Fix checkbox 'Financiado?'alignment on 'Possui automóveis?' and fix text field size on 'Parentes'

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -194,27 +194,16 @@
           <p class="text-truncate font-weight-600 texto nomeAluno">
             {{aluno.nome}}
           </p>
-<p>
-</p>
-
           <p class="hide show-gt-xs numero raAluno">
             {{aluno.ra}}
           </p>
-
-          <p>
-          </p>
-
+          <p class="texto"></p>
           <p class="hide show-gt-sm texto turmaAluno">
             {{aluno.turma.educador}}
           </p>
-
-          <p>
-          </p>
-          
           <p class="hide show-gt-sm data dataNascAluno">
             {{aluno.data_nascimento}}
           </p>
-
 
         </div>
           <div class="md-secondary actions" layout="row" layout-align="start center">
